--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "openwrt_vpn",
   "version": "1.0.0",
+  "private": "true",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "watch": "nodemon server -e js,jade",
+    "start": "node server"
   },
   "dependencies": {
-    "firebase": "3.1.0",
-    "express": "4.14.0"
+    "firebase": "^3.1.0",
+    "express": "^4.14.0",
+    "jade": "^1.11.0",
+    "nodemon": "^1.9.1"
   },
   "repository": {
     "type": "git",
